# arduino-uno-rust

./: .gitignore  Cargo.toml  README.adoc  after-build.sh  build-and-upload.sh  build-to-hex.sh
.cargo/: config.toml
01_blink/: Cargo.toml
02_blink_fade/: 02_blink_fade.sim1  Cargo.toml  README.md
02_blink_fade/src/: main.rs
03_pot_light/: Cargo.toml
03_pot_light/src/: main.rs
04_buzzer/: 04_buzzer.sim1  Cargo.toml  README.md
04_buzzer/src/: main.rs
05_night_light/: Cargo.toml
06_pulsar_bar/: Cargo.toml
07_running_bar/: Cargo.toml  README.md
09_mixer/: Cargo.toml
09_mixer/src/: main.rs
10_led_toggle/: Cargo.toml  README.md
10_led_toggle/src/: main.rs
11_inc_dec_light/: Cargo.toml  README.md
11_inc_dec_light/src/: main.rs
13_seven_segment_counter/: Cargo.toml
13_seven_segment_counter/src/: main.rs
14_shift_register/: Cargo.toml
14_shift_register/src/: main ex.rs  main lv.rs  main.rs
simulide/: 01_blink.sim1  01_blink.sim1.simu  02_blink_fade.sim1  03_pot_light.sim1  04_buzzer.sim1  05_night_light.sim1  06_pulsar_bars.sim1  07_running_bar.sim1  09_mixer.sim1  10_led_toggle.sim1  11_inc_dec_light.sim1  13_seven_segment_counter.sim1  14_seven_segment.sim1.sim1  14_seven_segment.sim1.simu  14_shift_register.kicad_sch  15_display.sim1  15_display_4x7.sim1
src/: 01_blink.rs  02_blink_fade.rs  05_night_light.rs  06_pulsar_bar.rs  07_running_bar.rs  09_mixer.rs  10_led_toggle.rs  11_inc_dec_light.rs  14_shift_register.rs  15_display.rs
