[package]
name = "amperka_lessons"
autobins= false
version = "0.2.0"
authors = ["Leonid Vygovskiy <leonid.vygovskiy@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "01_blink"
path = "src/01_blink.rs"
test = false
bench = false

[[bin]]
name = "02_blink_fade"
path = "src/02_blink_fade.rs"
test = false
bench = false

[[bin]]
name = "03_pot_light"
path = "src/03_pot_light.rs"
test = false
bench = false

[[bin]]
name = "04_buzzer"
path = "src/04_buzzer.rs"
test = false
bench = false

[[bin]]
name = "05_night_light"
path = "src/05_night_light.rs"
test = false
bench = false

[[bin]]
name = "06_pulsar_bar"
path = "src/06_pulsar_bar.rs"
test = false
bench = false

[[bin]]
name = "07_running_bar"
path = "src/07_running_bar.rs"
test = false
bench = false

[[bin]]
name = "09_mixer"
path = "src/09_mixer.rs"
test = false
bench = false

[[bin]]
name = "10_led_toggle"
path = "src/10_led_toggle.rs"
test = false
bench = false

[[bin]]
name = "11_inc_dec_light"
path = "src/11_inc_dec_light.rs"
test = false
bench = false

[[bin]]
name = "13_seven_segment_counter"
path = "src/13_seven_segment_counter.rs"
test = false
bench = false

[[bin]]
name = "14_shift_register"
path = "src/14_shift_register.rs"
test = false
bench = false

[[bin]]
name = "15_display"
path = "src/15_display.rs"
test = false
bench = false


[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.3.4"
features = ["atmega328p"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
